Enable to work:sparkles:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ExpandableTextView</string>
+    <string name="long_text">LongLongLongLongLongLongLongLongLongLongLongLongLongLongLongText</string>
 </resources>
